syntax = "proto3";

package de.hadiko.vev.k2.bierboerse;

import "google/protobuf/timestamp.proto";

service Bierboerse {

    rpc addBeverage (AddRequest) returns (Datapoint) {}

    rpc buyBeverage (BuyRequest) returns (BuyReply) {}

    rpc getPrices (PricesRequest) returns (Datapoint) {}

    rpc getHistory (HistoryRequest) returns (History) {}

  }

  message Beverage {
    string name = 1;
    int32 id = 2;
    int32 purchasingPrice = 3;
    int32 currentPrice = 4;
    int32 sold = 5;
    int32 profit = 6;
  }

  message Datapoint {
    repeated Beverage beverages = 1;
    google.protobuf.Timestamp timestamp = 2;

  }

  message History {
    repeated Datapoint history = 1;
  }

  message BuyRequest {
    int32 buyIndex = 1;
  }

  message AddRequest {
    Beverage beverage = 1;
  }

  message PricesRequest {
  }

  message HistoryRequest {
    google.protobuf.Timestamp from = 1;
  }

  message BuyReply {
    Datapoint oldPrices = 1;
    Datapoint newPrices = 2;
  }
